adding posts filtered by tag page

--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.11.6",
     "@astrojs/tailwind": "^2.1.2",
     "astro": "^1.6.10",
+    "sharp": "^0.31.2",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.8"
+    "@tailwindcss/typography": "^0.5.8",
+    "@types/node": "^18.11.9"
   }
 }
