--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@astrojs/image": "^0.11.6",
+    "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.1.2",
     "astro": "^1.6.10",
+    "astro-compress": "^1.1.12",
     "sharp": "^0.31.2",
     "tailwindcss": "^3.2.4"
   },
